# transparent-overlay

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yaml
src/: changeSrc.js  config.html  index.html  info_bubble.js  launch.js  main.js  styles.css  tailwind.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  config_window.rs  livechat.rs  main.rs  monitors_utils.rs  tray.rs  url.rs  warning.rs
